# TheHarvesterGUI

./: CMakeLists.txt  Further-Enhancements.txt  NOTES.txt  README.md  TheHarvesterGUI.pro  collapsiblegroupbox.cpp  collapsiblegroupbox.h  fileoperations.cpp  fileoperations.h  formatsettings.cpp  formatsettings.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  process.py  pythonworker.cpp  pythonworker.h  resources.qrc  sourcesmanager.cpp  sourcesmanager.h  workercontroller.cpp  workercontroller.h
